--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": ["eslint:recommended", "airbnb"],
   "rules": {
-    "semi": ["error", "never"]
+    "semi": ["error", "never"],
+    "no-unused-vars": [2, {"args": "after-used", "argsIgnorePattern": "^_"}]
   },
   "env": {
     "es6": true,
