--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,8 @@
   "extends": ["eslint:recommended", "airbnb"],
   "rules": {
     "semi": ["error", "never"],
-    "no-unused-vars": [2, {"args": "after-used", "argsIgnorePattern": "^_"}]
+    "no-unused-vars": [2, {"args": "after-used", "argsIgnorePattern": "^_"}],
+    "class-methods-use-this": 0
   },
   "env": {
     "es6": true,
