--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-hot-loader": "^3.1.3",
     "socket.io": "^2.0.4",
     "webpack": "^3.11.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^2.11.1",
+    "node-sass": "^4.13.0",
+    "sass-loader": "^7.0.0"
   },
   "devDependencies": {
     "css-loader": "^1.0.1",
